Asteroids/OGP assignment 2012-2013 part III - Asteroids/src/asteroids/model/programs/parsing/AsteroidsParserParser.java
// Generated from AsteroidsParser.g4 by ANTLR 4.0
 package asteroids.model.programs.parsing; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AsteroidsParserParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELF=1, TRUE=2, FALSE=3, NULL=4, BOOL=5, DOUBLE=6, ENTITY=7, SHIP=8, ASTEROID=9, 
		BULLET=10, ANY=11, GETRADIUS=12, GETX=13, GETY=14, GETVX=15, GETVY=16, 
		GETDIR=17, SQRT=18, SIN=19, COS=20, NOT=21, THRUSTON=22, THRUSTOFF=23, 
		TURN=24, FIRE=25, SKIP=26, PRINT=27, IF=28, THEN=29, ELSE=30, WHILE=31, 
		DO=32, FOREACH=33, ASSIGN=34, MUL=35, DIV=36, ADD=37, SUB=38, EQ=39, NEQ=40, 
		LT=41, GT=42, LEQ=43, GEQ=44, AND=45, OR=46, NUMBER=47, FLOAT=48, INTEGER=49, 
		SIGN=50, IDENTIFIER=51, LEFT_PAREN=52, RIGHT_PAREN=53, LEFT_BRACE=54, 
		RIGHT_BRACE=55, SEMICOLON=56, COMMA=57, WHITESPACE=58, SINGLE_COMMENT=59, 
		MOD=60;
	public static final String[] tokenNames = {
		"<INVALID>", "'self'", "'true'", "'false'", "'null'", "'bool'", "'double'", 
		"'entity'", "'ship'", "'asteroid'", "'bullet'", "'any'", "'getradius'", 
		"'getx'", "'gety'", "'getvx'", "'getvy'", "'getdir'", "'sqrt'", "'sin'", 
		"'cos'", "'!'", "'thrust'", "'thrust_off'", "'turn'", "'fire'", "'skip'", 
		"'print'", "'if'", "'then'", "'else'", "'while'", "'do'", "'foreach'", 
		"':='", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'&&'", "'||'", "NUMBER", "FLOAT", "INTEGER", "SIGN", "IDENTIFIER", 
		"'('", "')'", "'{'", "'}'", "';'", "','", "WHITESPACE", "SINGLE_COMMENT", 
		"MOD"
	};
	public static final int
		RULE_eval = 0, RULE_decl = 1, RULE_action = 2, RULE_unop = 3, RULE_ctrl = 4, 
		RULE_ifthenelse = 5, RULE_whiledo = 6, RULE_foreach = 7, RULE_assign = 8, 
		RULE_expr = 9, RULE_namedconst = 10, RULE_type = 11, RULE_entityspec = 12, 
		RULE_binop = 13;
	public static final String[] ruleNames = {
		"eval", "decl", "action", "unop", "ctrl", "ifthenelse", "whiledo", "foreach", 
		"assign", "expr", "namedconst", "type", "entityspec", "binop"
	};

	@Override
	public String getGrammarFileName() { return "AsteroidsParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }




	public AsteroidsParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvalContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AsteroidsParserParser.SEMICOLON, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(AsteroidsParserParser.PRINT, 0); }
		public CtrlContext ctrl() {
			return getRuleContext(CtrlContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterEval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitEval(this);
		}
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << THRUSTON) | (1L << THRUSTOFF) | (1L << TURN) | (1L << FIRE) | (1L << SKIP) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
				{
				setState(43);
				switch (_input.LA(1)) {
				case BOOL:
				case DOUBLE:
				case ENTITY:
					{
					setState(28); decl();
					setState(29); match(SEMICOLON);
					}
					break;
				case THRUSTON:
				case THRUSTOFF:
				case TURN:
				case FIRE:
				case SKIP:
					{
					setState(31); action();
					setState(32); match(SEMICOLON);
					}
					break;
				case IDENTIFIER:
					{
					setState(34); assign();
					setState(35); match(SEMICOLON);
					}
					break;
				case PRINT:
					{
					setState(37); match(PRINT);
					setState(38); expr(0);
					setState(39); match(SEMICOLON);
					}
					break;
				case IF:
				case WHILE:
				case FOREACH:
					{
					setState(41); ctrl();
					}
					break;
				case SEMICOLON:
					{
					setState(42); match(SEMICOLON);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(46);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(45); eval();
					}
					break;
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(AsteroidsParserParser.ASSIGN, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); type();
			setState(51); match(IDENTIFIER);
			setState(54);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(52); match(ASSIGN);
				setState(53); expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode FIRE() { return getToken(AsteroidsParserParser.FIRE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode TURN() { return getToken(AsteroidsParserParser.TURN, 0); }
		public TerminalNode THRUSTOFF() { return getToken(AsteroidsParserParser.THRUSTOFF, 0); }
		public TerminalNode THRUSTON() { return getToken(AsteroidsParserParser.THRUSTON, 0); }
		public TerminalNode SKIP() { return getToken(AsteroidsParserParser.SKIP, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_action);
		try {
			setState(62);
			switch (_input.LA(1)) {
			case THRUSTON:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); match(THRUSTON);
				}
				break;
			case THRUSTOFF:
				enterOuterAlt(_localctx, 2);
				{
				setState(57); match(THRUSTOFF);
				}
				break;
			case TURN:
				enterOuterAlt(_localctx, 3);
				{
				setState(58); match(TURN);
				setState(59); expr(0);
				}
				break;
			case FIRE:
				enterOuterAlt(_localctx, 4);
				{
				setState(60); match(FIRE);
				}
				break;
			case SKIP:
				enterOuterAlt(_localctx, 5);
				{
				setState(61); match(SKIP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnopContext extends ParserRuleContext {
		public TerminalNode GETVY() { return getToken(AsteroidsParserParser.GETVY, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(AsteroidsParserParser.LEFT_PAREN, 0); }
		public TerminalNode GETVX() { return getToken(AsteroidsParserParser.GETVX, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AsteroidsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode NOT() { return getToken(AsteroidsParserParser.NOT, 0); }
		public TerminalNode SIN() { return getToken(AsteroidsParserParser.SIN, 0); }
		public TerminalNode SQRT() { return getToken(AsteroidsParserParser.SQRT, 0); }
		public TerminalNode GETRADIUS() { return getToken(AsteroidsParserParser.GETRADIUS, 0); }
		public TerminalNode GETY() { return getToken(AsteroidsParserParser.GETY, 0); }
		public TerminalNode GETX() { return getToken(AsteroidsParserParser.GETX, 0); }
		public TerminalNode COS() { return getToken(AsteroidsParserParser.COS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterUnop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitUnop(this);
		}
	}

	public final UnopContext unop() throws RecognitionException {
		UnopContext _localctx = new UnopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unop);
		try {
			setState(91);
			switch (_input.LA(1)) {
			case GETRADIUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(64); match(GETRADIUS);
				setState(65); expr(0);
				}
				break;
			case GETX:
				enterOuterAlt(_localctx, 2);
				{
				setState(66); match(GETX);
				setState(67); expr(0);
				}
				break;
			case GETY:
				enterOuterAlt(_localctx, 3);
				{
				setState(68); match(GETY);
				setState(69); expr(0);
				}
				break;
			case GETVX:
				enterOuterAlt(_localctx, 4);
				{
				setState(70); match(GETVX);
				setState(71); expr(0);
				}
				break;
			case GETVY:
				enterOuterAlt(_localctx, 5);
				{
				setState(72); match(GETVY);
				setState(73); expr(0);
				}
				break;
			case SQRT:
				enterOuterAlt(_localctx, 6);
				{
				setState(74); match(SQRT);
				setState(75); match(LEFT_PAREN);
				setState(76); expr(0);
				setState(77); match(RIGHT_PAREN);
				}
				break;
			case SIN:
				enterOuterAlt(_localctx, 7);
				{
				setState(79); match(SIN);
				setState(80); match(LEFT_PAREN);
				setState(81); expr(0);
				setState(82); match(RIGHT_PAREN);
				}
				break;
			case COS:
				enterOuterAlt(_localctx, 8);
				{
				setState(84); match(COS);
				setState(85); match(LEFT_PAREN);
				setState(86); expr(0);
				setState(87); match(RIGHT_PAREN);
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 9);
				{
				setState(89); match(NOT);
				setState(90); expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtrlContext extends ParserRuleContext {
		public ForeachContext foreach() {
			return getRuleContext(ForeachContext.class,0);
		}
		public WhiledoContext whiledo() {
			return getRuleContext(WhiledoContext.class,0);
		}
		public IfthenelseContext ifthenelse() {
			return getRuleContext(IfthenelseContext.class,0);
		}
		public CtrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterCtrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitCtrl(this);
		}
	}

	public final CtrlContext ctrl() throws RecognitionException {
		CtrlContext _localctx = new CtrlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ctrl);
		try {
			setState(96);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(93); ifthenelse();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); whiledo();
				}
				break;
			case FOREACH:
				enterOuterAlt(_localctx, 3);
				{
				setState(95); foreach();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfthenelseContext extends ParserRuleContext {
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(AsteroidsParserParser.RIGHT_BRACE); }
		public EvalContext eval(int i) {
			return getRuleContext(EvalContext.class,i);
		}
		public TerminalNode THEN() { return getToken(AsteroidsParserParser.THEN, 0); }
		public List<EvalContext> eval() {
			return getRuleContexts(EvalContext.class);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> LEFT_BRACE() { return getTokens(AsteroidsParserParser.LEFT_BRACE); }
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(AsteroidsParserParser.RIGHT_BRACE, i);
		}
		public TerminalNode ELSE() { return getToken(AsteroidsParserParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(AsteroidsParserParser.IF, 0); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(AsteroidsParserParser.LEFT_BRACE, i);
		}
		public IfthenelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifthenelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterIfthenelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitIfthenelse(this);
		}
	}

	public final IfthenelseContext ifthenelse() throws RecognitionException {
		IfthenelseContext _localctx = new IfthenelseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifthenelse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(IF);
			setState(99); expr(0);
			setState(101);
			_la = _input.LA(1);
			if (_la==THEN) {
				{
				setState(100); match(THEN);
				}
			}

			setState(103); match(LEFT_BRACE);
			setState(104); eval();
			setState(105); match(RIGHT_BRACE);
			setState(111);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(106); match(ELSE);
				setState(107); match(LEFT_BRACE);
				setState(108); eval();
				setState(109); match(RIGHT_BRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhiledoContext extends ParserRuleContext {
		public TerminalNode RIGHT_BRACE() { return getToken(AsteroidsParserParser.RIGHT_BRACE, 0); }
		public TerminalNode DO() { return getToken(AsteroidsParserParser.DO, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(AsteroidsParserParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LEFT_BRACE() { return getToken(AsteroidsParserParser.LEFT_BRACE, 0); }
		public WhiledoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whiledo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterWhiledo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitWhiledo(this);
		}
	}

	public final WhiledoContext whiledo() throws RecognitionException {
		WhiledoContext _localctx = new WhiledoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whiledo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(WHILE);
			setState(114); expr(0);
			setState(116);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(115); match(DO);
				}
			}

			setState(118); match(LEFT_BRACE);
			setState(119); eval();
			setState(120); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForeachContext extends ParserRuleContext {
		public TerminalNode RIGHT_BRACE() { return getToken(AsteroidsParserParser.RIGHT_BRACE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(AsteroidsParserParser.LEFT_PAREN, 0); }
		public TerminalNode DO() { return getToken(AsteroidsParserParser.DO, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AsteroidsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode FOREACH() { return getToken(AsteroidsParserParser.FOREACH, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AsteroidsParserParser.COMMA, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AsteroidsParserParser.LEFT_BRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public EntityspecContext entityspec() {
			return getRuleContext(EntityspecContext.class,0);
		}
		public ForeachContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreach; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterForeach(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitForeach(this);
		}
	}

	public final ForeachContext foreach() throws RecognitionException {
		ForeachContext _localctx = new ForeachContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_foreach);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(FOREACH);
			setState(123); match(LEFT_PAREN);
			setState(124); entityspec();
			setState(125); match(COMMA);
			setState(126); match(IDENTIFIER);
			setState(127); match(RIGHT_PAREN);
			setState(129);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(128); match(DO);
				}
			}

			setState(131); match(LEFT_BRACE);
			setState(132); eval();
			setState(133); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(AsteroidsParserParser.ASSIGN, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(IDENTIFIER);
			setState(136); match(ASSIGN);
			setState(137); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public int _p;
		public TerminalNode LEFT_PAREN() { return getToken(AsteroidsParserParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AsteroidsParserParser.RIGHT_PAREN, 0); }
		public UnopContext unop() {
			return getRuleContext(UnopContext.class,0);
		}
		public TerminalNode GETDIR() { return getToken(AsteroidsParserParser.GETDIR, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public NamedconstContext namedconst() {
			return getRuleContext(NamedconstContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public BinopContext binop() {
			return getRuleContext(BinopContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(AsteroidsParserParser.NUMBER, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState, _p);
		ExprContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, RULE_expr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			switch (_input.LA(1)) {
			case NUMBER:
				{
				setState(140); match(NUMBER);
				}
				break;
			case IDENTIFIER:
				{
				setState(141); match(IDENTIFIER);
				}
				break;
			case GETDIR:
				{
				setState(142); match(GETDIR);
				}
				break;
			case LEFT_PAREN:
				{
				setState(143); match(LEFT_PAREN);
				setState(144); expr(0);
				setState(145); match(RIGHT_PAREN);
				}
				break;
			case SELF:
			case TRUE:
			case FALSE:
			case NULL:
				{
				setState(147); namedconst();
				}
				break;
			case GETRADIUS:
			case GETX:
			case GETY:
			case GETVX:
			case GETVY:
			case SQRT:
			case SIN:
			case COS:
			case NOT:
				{
				setState(148); unop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_expr);
					setState(151);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(152); binop();
					setState(153); expr(0);
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
